fixing paths and files

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -135,8 +135,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Plot of fit for all degrees before diciding by evaluation on which degree that yeilds the best fit"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "def randrange(n, vmin, vmax):\r\n",
     "    return (vmax - vmin)*np.random.rand(n) + vmin\r\n",
@@ -145,26 +152,17 @@
     "degrees = 6\r\n",
     "z_train_OLS = pd.DataFrame()\r\n",
     "z_hat_train_OLS = pd.DataFrame()\r\n",
+    "z_test_OLS = pd.DataFrame()\r\n",
+    "z_hat_test_OLS = pd.DataFrame()\r\n",
     "\r\n",
     "# TODO: Must fix so that training and test data are used. \r\n",
     "# Must evalute model using MSE from traning and test\r\n",
     "for degree in range(1, degrees + 1):\r\n",
     "    X = create_X(x, y, degree) # Design Matrix\r\n",
-    "    \r\n",
-    "    # TODO: insert train_test_split with seed\r\n",
-    "    \r\n",
     "    model = OLS() # The model\r\n",
     "    model.fit(X, z) # Fitting the model\r\n",
-    "    z_hat = model.predict(X) # Predicting z_hat values in traning data\r\n",
-    "\r\n",
-    "    # Evaluatation metrics\r\n",
-    "    # TODO:\r\n",
+    "    z_hat = model.predict(X) # predict on train data\r\n",
     "    \r\n",
-    "    # Filling up dataframes\r\n",
-    "    z_train_OLS[degree] = z.flatten() \r\n",
-    "    z_hat_train_OLS[degree] = z_hat.flatten()\r\n",
-    "\r\n",
-    "    zs = randrange(n, 0, 50)\r\n",
     "    # Plot\r\n",
     "    ax = fig.add_subplot(3,2, degree, projection='3d')\r\n",
     "    ax.view_init(elev=30., azim=-25.0)\r\n",
@@ -175,6 +173,94 @@
     "plt.tight_layout()\r\n",
     "plt.savefig(f\"{REPORT_FIGURES}franke_function_fit_OLS.pdf\")"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "def randrange(n, vmin, vmax):\r\n",
+    "    return (vmax - vmin)*np.random.rand(n) + vmin\r\n",
+    "\r\n",
+    "fig = plt.figure(figsize=(8,8))\r\n",
+    "degrees = 6\r\n",
+    "z_train_OLS = pd.DataFrame()\r\n",
+    "z_hat_train_OLS = pd.DataFrame()\r\n",
+    "z_test_OLS = pd.DataFrame()\r\n",
+    "z_hat_test_OLS = pd.DataFrame()\r\n",
+    "\r\n",
+    "# TODO: Must fix so that training and test data are used. \r\n",
+    "# Must evalute model using MSE from traning and test\r\n",
+    "for degree in range(1, degrees + 1):\r\n",
+    "    X = create_X(x, y, degree) # Design Matrix\r\n",
+    "    X_train, X_test, z_train, z_test = train_test_split(X,z, test_size=0.2, shuffle=True, random_state=4155)\r\n",
+    "    \r\n",
+    "    model = OLS() # The model\r\n",
+    "    model.fit(X_train, z_train) # Fitting the model\r\n",
+    "    \r\n",
+    "    # Predictions\r\n",
+    "    z_hat_train = model.predict(X_train) # predict on train data\r\n",
+    "    z_hat_test = model.predict(X_test) # predict on test data\r\n",
+    "\r\n",
+    "    # Evaluatation metrics\r\n",
+    "    # TODO:\r\n",
+    "    # Filling up dataframes\r\n",
+    "    z_train_OLS[degree] = z_train.flatten() \r\n",
+    "    z_hat_train_OLS[degree] = z_hat_train.flatten()\r\n",
+    "    z_test_OLS[degree] = z_test.flatten()\r\n",
+    "    z_hat_test_OLS[degree] = z_hat_test.flatten()\r\n",
+    "\r\n",
+    "\r\n",
+    "# MSE calculations for all lambda values\r\n",
+    "mse_scores_train = ((z_train_OLS - z_hat_train_OLS) ** 2).mean()\r\n",
+    "mse_scores_test = ((z_test_OLS - z_hat_test_OLS) ** 2).mean()\r\n",
+    "# R2 calculations for all lambda values\r\n",
+    "R2_scores_train = 1 - ((z_train_OLS - z_hat_train_OLS) ** 2).sum() / ((z_train_OLS - z_train_OLS.mean())**2).sum() \r\n",
+    "R2_scores_test = 1 - ((z_test_OLS - z_hat_test_OLS) ** 2).sum() / ((z_test_OLS - z_test_OLS.mean())**2).sum()  \r\n",
+    "\r\n",
+    "# Plots\r\n",
+    "plt.figure(figsize=(12,8))\r\n",
+    "plt.plot(np.arange(1,degrees+1), mse_scores_train, label=\"Training data\")\r\n",
+    "plt.plot(np.arange(1,degrees+1), mse_scores_test, label=\"Test data\")\r\n",
+    "plt.xlabel(\"Model complexity - Number of polynomial degrees\")\r\n",
+    "plt.ylabel(\"MSE\")\r\n",
+    "plt.title(\"Training evaluation on OLS regression fit\")\r\n",
+    "plt.legend()\r\n",
+    "plt.tight_layout()\r\n",
+    "plt.savefig(f\"{REPORT_FIGURES}Franke_Function_OLS_fit_evaluation.pdf.pdf\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "best_degree = 5\r\n",
+    "X = create_X(x, y, best_degree) # Design Matrix\r\n",
+    "model = OLS() # The model\r\n",
+    "model.fit(X, z) # Fitting the model\r\n",
+    "z_hat = model.predict(X) # predict on train data\r\n",
+    "\r\n",
+    "# Plot\r\n",
+    "\r\n",
+    "fig = plt.figure()#figsize=(8,8))\r\n",
+    "ax = plt.axes(projection='3d')\r\n",
+    "ax.title.set_text(f\"OLS regression fit to the Franke Function\\nbest degree {best_degree},\")\r\n",
+    "#ax.view_init(elev=5., azim=85.0)\r\n",
+    "ax.view_init(elev=30., azim=-25.0)\r\n",
+    "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
+    "ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\r\n",
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_best_fit_OLS.pdf\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -195,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
     "features = 6\r\n",
     "#x = np.arange(0, 1, 0.05)\r\n",
@@ -244,20 +330,20 @@
     "plt.ylabel(\"MSE\")\r\n",
     "plt.title(\"Training evaluation on Ridge regression fit\")\r\n",
     "plt.legend()\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}Franke Function Ridge fit evaluation.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}Franke_Function_Ridge_fit_evaluation.pdf\")"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-7-50920c0e358f>:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-5c97b1ad3c48>:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_train_ridge[lam] = z_train.flatten()\n",
-      "<ipython-input-7-50920c0e358f>:26: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-5c97b1ad3c48>:26: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_hat_train_ridge[lam] = z_hat_train.flatten()\n",
-      "<ipython-input-7-50920c0e358f>:27: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-5c97b1ad3c48>:27: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_test_ridge[lam] = z_test.flatten()\n",
-      "<ipython-input-7-50920c0e358f>:28: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-5c97b1ad3c48>:28: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_hat_test_ridge[lam] = z_hat_test.flatten()\n"
      ]
     }
@@ -273,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "lam = -1.1\r\n",
     "model = RidgeRegression(lam) # The model\r\n",
