--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -61,7 +61,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## First we plot a 3D plot of the franke function"
+    "#  Franke function 3D preview\r\n",
+    "First we plot a 3D plot of the franke function"
    ],
    "metadata": {}
   },
@@ -108,7 +109,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Defining and creating the data"
+    "# 1 - Ordinary Least Squeares (OLS)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.1 Data\r\n",
+    "Defining and creating the data\r\n"
    ],
    "metadata": {}
   },
@@ -129,15 +138,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Approximate the franke function using ordinary least squares\r\n",
-    "We estimate the franke functinon using polynomials up to 6th degree. We than look at the MSE scores to look for overfitting. We use the MSE score values from the test data to determine overfit together with the corveture of the plots"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Plot of fit for all degrees before diciding by evaluation on which degree that yeilds the best fit"
+    "## 1.2 Plot of fit for all degrees before evaluation\r\n",
+    " We plot the fit up to degree 6 to get an intuition on the curvature of the fitted models"
    ],
    "metadata": {}
   },
@@ -145,9 +147,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "def randrange(n, vmin, vmax):\r\n",
-    "    return (vmax - vmin)*np.random.rand(n) + vmin\r\n",
-    "\r\n",
     "fig = plt.figure(figsize=(8,8))\r\n",
     "degrees = 6\r\n",
     "z_train_OLS = pd.DataFrame()\r\n",
@@ -177,12 +176,18 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.3 - Finding degree/model complexity for the optimal OLS fit\r\n",
+    "Approximate the franke function using ordinary least squares\r\n",
+    "We estimate the franke functinon using polynomials up to 6th degree. We than look at the MSE scores to look for overfitting. We use the MSE score values from the test data to determine overfit together with the curvature of the evaluation plot"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "def randrange(n, vmin, vmax):\r\n",
-    "    return (vmax - vmin)*np.random.rand(n) + vmin\r\n",
-    "\r\n",
     "fig = plt.figure(figsize=(8,8))\r\n",
     "degrees = 6\r\n",
     "z_train_OLS = pd.DataFrame()\r\n",
@@ -228,9 +233,20 @@
     "plt.title(\"Training evaluation on OLS regression fit\")\r\n",
     "plt.legend()\r\n",
     "plt.tight_layout()\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}Franke_Function_OLS_fit_evaluation.pdf.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_OLS_fit_evaluation.pdf.pdf\")"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.4 Analysis of plots and training metrics\r\n",
+    "Do the analysis.......\r\n",
+    "\r\n",
+    "Conclusion:<br>\r\n",
+    "We conclude that a model complexity of degree yields the most optimal fit."
+   ],
    "metadata": {}
   },
   {
@@ -330,20 +346,20 @@
     "plt.ylabel(\"MSE\")\r\n",
     "plt.title(\"Training evaluation on Ridge regression fit\")\r\n",
     "plt.legend()\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}Franke_Function_Ridge_fit_evaluation.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_Ridge_fit_evaluation.pdf\")"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-8-5c97b1ad3c48>:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-61af6592398f>:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_train_ridge[lam] = z_train.flatten()\n",
-      "<ipython-input-8-5c97b1ad3c48>:26: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-61af6592398f>:26: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_hat_train_ridge[lam] = z_hat_train.flatten()\n",
-      "<ipython-input-8-5c97b1ad3c48>:27: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-61af6592398f>:27: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_test_ridge[lam] = z_test.flatten()\n",
-      "<ipython-input-8-5c97b1ad3c48>:28: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-8-61af6592398f>:28: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_hat_test_ridge[lam] = z_hat_test.flatten()\n"
      ]
     }
