Added headline for different tasks

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -188,7 +188,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "fig = plt.figure(figsize=(8,8))\r\n",
     "degrees = 6\r\n",
     "z_train_OLS = pd.DataFrame()\r\n",
     "z_hat_train_OLS = pd.DataFrame()\r\n",
@@ -245,7 +244,14 @@
     "Do the analysis.......\r\n",
     "\r\n",
     "Conclusion:<br>\r\n",
-    "We conclude that a model complexity of degree yields the most optimal fit."
+    "Based on the analysis, we conclude that a model complexity of degree 5 yields the most optimal fit."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.5 plot of the model using the most optimal parameters"
    ],
    "metadata": {}
   },
@@ -253,17 +259,16 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "best_degree = 5\r\n",
-    "X = create_X(x, y, best_degree) # Design Matrix\r\n",
+    "degree_optimal = 5\r\n",
+    "X = create_X(x, y, degree_optimal) # Design Matrix\r\n",
     "model = OLS() # The model\r\n",
     "model.fit(X, z) # Fitting the model\r\n",
     "z_hat = model.predict(X) # predict on train data\r\n",
     "\r\n",
     "# Plot\r\n",
-    "\r\n",
     "fig = plt.figure()#figsize=(8,8))\r\n",
     "ax = plt.axes(projection='3d')\r\n",
-    "ax.title.set_text(f\"OLS regression fit to the Franke Function\\nbest degree {best_degree},\")\r\n",
+    "ax.title.set_text(f\"OLS regression fit to the Franke Function\\noptimal degree {degree_optimal},\")\r\n",
     "#ax.view_init(elev=5., azim=85.0)\r\n",
     "ax.view_init(elev=30., azim=-25.0)\r\n",
     "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
@@ -283,15 +288,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Approximate the franke function using Ridge regression\r\n",
-    "First we find the optimal value for the lambda parameter by splitting the input data into training and test data. Than we fit the model using different values for lambda. For each lambda value we use the mean square error on the test data evaluate how god the fit is. The best lambda value is used to fit a new model with all data (not using train-test split). "
+    "# 2 - Ridge Regression"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "First we find the optimal parameter value of lambda, $\\lambda$, by evaluating overfit from evaluation plot where we plot the values for MSE for training and test data"
+    "## 2.1 Data\r\n",
+    "Defining and creating the data\r\n"
    ],
    "metadata": {}
   },
@@ -302,10 +307,26 @@
     "features = 6\r\n",
     "#x = np.arange(0, 1, 0.05)\r\n",
     "#y = np.arange(0, 1, 0.05)\r\n",
-    "\r\n",
     "X = create_X(x, y, n=features) # Design Matrix\r\n",
     "z = FrankeFunction(x,y)\r\n",
-    "z += noise\r\n",
+    "z += noise"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2.3 - Finding degree/model complexity for the optimal OLS fit\r\n",
+    "First we find the optimal value for the lambda parameter by splitting the input data into training and test data. Than we fit the model using different values for lambda. For each lambda value we use the mean square error on the test data evaluate how god the fit is. The best lambda value is used to fit a new model with all data (not using train-test split). <br>\r\n",
+    "First we find the optimal parameter value of lambda, $\\lambda$, by evaluating overfit from evaluation plot where we plot the values for MSE for training and test data"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
     "nbf_lambdas = 300\r\n",
     "lambdas = np.logspace(-6,6, nbf_lambdas)\r\n",
     "z_train_ridge = pd.DataFrame()\r\n",
@@ -353,13 +374,13 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-8-61af6592398f>:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-9-c531ee5f723e>:18: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_train_ridge[lam] = z_train.flatten()\n",
-      "<ipython-input-8-61af6592398f>:26: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-9-c531ee5f723e>:19: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_hat_train_ridge[lam] = z_hat_train.flatten()\n",
-      "<ipython-input-8-61af6592398f>:27: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-9-c531ee5f723e>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_test_ridge[lam] = z_test.flatten()\n",
-      "<ipython-input-8-61af6592398f>:28: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "<ipython-input-9-c531ee5f723e>:21: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  z_hat_test_ridge[lam] = z_hat_test.flatten()\n"
      ]
     }
@@ -367,15 +388,26 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "## 2.4 Analysis of plots and training metrics\r\n",
+    "Do the analysis.......\r\n",
+    "\r\n",
+    "Conclusion:<br>\r\n",
+    "Based on the analysis, we conclude that a model complexity of degree 5 yields the most optimal fit."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2.5 plot of the model using the most optimal parameters"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "lam = -1.1\r\n",
     "model = RidgeRegression(lam) # The model\r\n",
