Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,13 @@ The variance of $\boldsymbol{y}$ is defined as;
   \label{fig: ?}
 \end{figure}
 
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.85]{figures/Franke_Function_OLS_fit_evaluation.pdf.pdf}
+  \caption{?}
+  \label{fig: ?}
+\end{figure}
+
 
 
 \section*{Exercise 2}
