--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -170,7 +170,7 @@
     "    ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\r\n",
     "fig.suptitle(\"OLS fit to the Franke Function\")\r\n",
     "plt.tight_layout()\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}franke_function_fit_OLS.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_OLS_fit.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -232,7 +232,7 @@
     "plt.title(\"Training evaluation on OLS regression fit\")\r\n",
     "plt.legend()\r\n",
     "plt.tight_layout()\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}franke_function_OLS_fit_evaluation.pdf.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_OLS_evaluate_fit.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -273,15 +273,8 @@
     "ax.view_init(elev=30., azim=-25.0)\r\n",
     "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
     "ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}franke_function_best_fit_OLS.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_OLS_best_fit.pdf\")"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -317,7 +310,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2.3 - Finding degree/model complexity for the optimal OLS fit\r\n",
+    "## 2.3 - Finding optimal lambda for Ridge fit\r\n",
     "First we find the optimal value for the lambda parameter by splitting the input data into training and test data. Than we fit the model using different values for lambda. For each lambda value we use the mean square error on the test data evaluate how god the fit is. The best lambda value is used to fit a new model with all data (not using train-test split). <br>\r\n",
     "First we find the optimal parameter value of lambda, $\\lambda$, by evaluating overfit from evaluation plot where we plot the values for MSE for training and test data"
    ],
@@ -325,9 +318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "source": [
-    "nbf_lambdas = 300\r\n",
+    "nbf_lambdas = 100\r\n",
     "lambdas = np.logspace(-6,6, nbf_lambdas)\r\n",
     "z_train_ridge = pd.DataFrame()\r\n",
     "z_hat_train_ridge = pd.DataFrame()\r\n",
@@ -367,24 +360,9 @@
     "plt.ylabel(\"MSE\")\r\n",
     "plt.title(\"Training evaluation on Ridge regression fit\")\r\n",
     "plt.legend()\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}franke_function_Ridge_fit_evaluation.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_Ridge_evaluate_fit.pdf\")"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "<ipython-input-9-c531ee5f723e>:18: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  z_train_ridge[lam] = z_train.flatten()\n",
-      "<ipython-input-9-c531ee5f723e>:19: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  z_hat_train_ridge[lam] = z_hat_train.flatten()\n",
-      "<ipython-input-9-c531ee5f723e>:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  z_test_ridge[lam] = z_test.flatten()\n",
-      "<ipython-input-9-c531ee5f723e>:21: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider using pd.concat instead.  To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  z_hat_test_ridge[lam] = z_hat_test.flatten()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -407,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "source": [
     "lam = -1.1\r\n",
     "model = RidgeRegression(lam) # The model\r\n",
@@ -431,7 +409,7 @@
     "ax.view_init(elev=30., azim=-25.0)\r\n",
     "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\r\n",
     "ax.scatter3D(x,y,z,c=z, cmap=cm.coolwarm, marker = '.')\r\n",
-    "plt.savefig(f\"{REPORT_FIGURES}franke_function_Ridge_fit.pdf\")"
+    "plt.savefig(f\"{REPORT_FIGURES}franke_function_Ridge_best_fit.pdf\")"
    ],
    "outputs": [],
    "metadata": {}
