Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -65,31 +65,38 @@ The variance of $\boldsymbol{y}$ is defined as;
 
 \begin{figure}
   \centering
-  \includegraphics[scale=0.85]{figures/franke_function_fit_OLS.pdf}
+  \includegraphics[scale=0.85]{figures/franke_function_OLS_fit.pdf}
   \caption{?}
   \label{fig: ?}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics[scale=0.85]{figures/Franke_Function_OLS_fit_evaluation.pdf.pdf}
+  \includegraphics[scale=0.45]{figures/franke_function_OLS_evaluate_fit.pdf}
   \caption{?}
   \label{fig: ?}
 \end{figure}
 
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.85]{figures/franke_function_OLS_best_fit.pdf}
+  \caption{?}
+  \label{fig: ?}
+\end{figure}
 
 
 \section*{Exercise 2}
+
 \begin{figure}
   \centering
-  \includegraphics[scale=0.55]{figures/Franke Function Ridge fit evaluation.pdf}
-  \caption{?}
-  \label{fig: ?}
+  \includegraphics[scale=0.45]{figures/franke_function_Ridge_evaluate_fit.pdf}
+  \caption{The best fit using Ridge}
+  \label{fig: Ridge_best_fit}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics{figures/franke_function_Ridge_fit.pdf}
+  \includegraphics[scale=0.85]{figures/franke_function_Ridge_best_fit.pdf}
   \caption{The best fit using Ridge}
   \label{fig: Ridge_best_fit}
 \end{figure}
