Commented out font

--- a/main.tex
+++ b/main.tex
@@ -19,10 +19,10 @@
 \usepackage{todonotes}
 
 % Set up fonts
-\usepackage{fontspec}
-\usepackage{unicode-math}
-\setmainfont{STIX Two Text}
-\setmathfont{STIX Two Math}
+% \usepackage{fontspec}
+% \usepackage{unicode-math}
+% \setmainfont{STIX Two Text}
+% \setmathfont{STIX Two Math}
 
 \title{FYS-STK4155 - Project1}
 \author{Gard, Are, David Andreas Bordvik}
