--- a/code/Exercise3.ipynb
+++ b/code/Exercise3.ipynb
@@ -9,14 +9,113 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### Exercise 3:  Cross-validation as resampling techniques, adding more complexity (score 15 points)\n",
+    "\n",
+    "The aim here is to write your own code for another widely popular\n",
+    "resampling technique, the so-called cross-validation method.  Again,\n",
+    "before you start with cross-validation approach, you should scale your\n",
+    "data.\n",
+    "\n",
+    "Implement the $k$-fold cross-validation algorithm (write your own\n",
+    "code) and evaluate again the MSE function resulting\n",
+    "from the test folds. You can compare your own code with that from\n",
+    "**Scikit-Learn** if needed. \n",
+    "\n",
+    "Compare the MSE you get from your cross-validation code with the one\n",
+    "you got from your **bootstrap** code. Comment your results. Try $5-10$\n",
+    "folds.  You can also compare your own cross-validation code with the\n",
+    "one provided by **Scikit-Learn**.\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(4155)\n",
+    "\n",
+    "# Generate the data.\n",
+    "nsamples = 100\n",
+    "x = np.random.randn(nsamples)\n",
+    "y = 3*x**2 + np.random.randn(nsamples)\n",
+    "\n",
+    "\n",
+    "#scale data !!\n",
+    "\n",
+    "def cross_val(k_folds: int):\n",
+    "    # TODO: is equal splitting of x and y guaranteed with np.array_split if nsamples%k_folds != 0 ??\n",
+    "    x_fold = np.array_split(ary = x,indices_or_sections = k_folds)\n",
+    "    y_fold = np.array_split(ary = y,indices_or_sections = k_folds)\n",
+    "    \n",
+    "    for k in k_folds:\n",
+    "        xtrain = \n",
+    "    \n",
+    "\n",
+    "cross_val(6)"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-11-8100ecbe69e4>, line 24)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-8100ecbe69e4>\"\u001b[0;36m, line \u001b[0;32m24\u001b[0m\n\u001b[0;31m    cross_val(6)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "source": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.8",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
   }
  },
  "nbformat": 4,
